# rust_waf

./: .env  .env.example  .gitignore  ATTACK_MEMORY_REMEDIATION_PLAN.md  AUTO_ADAPTIVE_TUNING_PLAN.md  BLOOM_FILTER_USAGE.md  CDN_CC_OPTIMIZATION_SUMMARY.md  CODING_STANDARDS.md  CURRENT_OPTIMIZATION_STATUS.md  Cargo.toml  FRONTEND_PAGE_SPLIT_PLAN.md  FRONTEND_STANDARDIZATION_CHECKLIST.md  HTTP2_IMPLEMENTATION.md  HTTP3_IMPLEMENTATION_COMPLETE.md  L4_L7_CDN_AI_OPTIMIZATION_PLAN.md  MODIFICATION_PLAN.md  PROJECT_STANDARDIZATION_TODO.md  README.md  STAGE10_BACKEND_OPTIMIZATION_REPORT.md  STAGE11_RIGOROUS_VALIDATION_REPORT.md  STAGE12_NORMAL_SURVIVAL_REPORT.md  STAGE7_CDN_CC_TEST_PLAN.md  STAGE7_RETEST_SUMMARY_AND_CAPACITY_ANALYSIS.md  STAGE8_CDN_CC_FAST_PATH_REPORT.md  STAGE9_NEXT_TARGET_REPORT.md  clippy.toml  multi_port_demo.sh  test_bloom_filter.rs
.github/workflows/: ci.yml  cli.yaml
benches/: l4_behavior.rs
config/: bloom_filter_demo.json  http3.json  minimal.json  standard.json  test_multi_port.json
data/: waf.db  waf.db-shm  waf.db-wal  waf.db.corrupt.1775956746
data/backups/: waf.corrupt..1776008103925513000.db  waf.pre-first-boot-sim.20260413-154034.db  waf.pre-user-first-boot.20260413-155313.db  waf.startup..1775957080477197000.db  waf.startup..1775957879868865000.db  waf.startup..1775957960102850000.db  waf.startup..1775959419392959000.db  waf.startup..1775959813201463000.db  waf.startup..1775959943765221000.db  waf.startup..1775960954451804000.db  waf.startup..1775967314699367000.db  waf.startup..1775967881731566000.db  waf.startup..1775968376747684000.db  waf.startup..1775969210630986000.db  waf.startup..1775971532583130000.db  waf.startup..1775972523846373000.db  waf.startup..1775972643121853000.db  waf.startup..1775973320501224000.db  waf.startup..1775973474142672000.db  waf.startup..1775974197807721000.db  waf.startup..1775976257562865000.db  waf.startup..1775976615961440000.db  waf.startup..1775977039697140000.db  waf.startup..1775977650038648000.db  waf.startup..1775982274287825000.db  waf.startup..1775983217101244000.db  waf.startup..1775988619472523000.db  waf.startup..1775989266935596000.db  waf.startup..1775994181218111000.db  waf.startup..1775994419479577000.db  waf.startup..1776005137118998000.db  waf.startup..1776008103936871000.db  waf.startup..1776011727678679000.db  waf.startup..1776065787455734000.db  waf.startup..1776065824552846000.db  waf.startup..1776065941808859000.db  waf.startup..1776066063165741000.db  waf.startup..1776066063176993000.db  waf.startup..1776066250784182000.db  waf.startup..1776066408998177000.db  (+5 more)
docs/: l7-upstream-hardening.md  server-deploy.md
dome-vue/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
examples/: http3_smoke.rs
paper/: add_3000_discoverability_content.py  add_cited_standard_basis_content.py  add_legal_standard_refs.py  add_more_literature_support.py  compress_verbose_sections.py  enhance_discoverability_metadata.py  enhance_literature_support.py  export_thesis_docx.py  merge_safe_text_from_bad_edit.py  optimize_literature_and_length.py  reduce_thesis_to_15k.py  repair_abstract_tc_position.py  repair_abstract_tc_strict.py  repair_format_after_reduction.py  repair_legal_reference_citations.py  repair_toc_pollution.py  rust_waf_thesis.html  论文更新日志.md
paper/1/: 02  文献综述（2000字左右）.docx  02  文献综述（2000字左右）_参考.docx  03  开题报告.docx  03  开题报告_参考.docx  generate_docs_from_reference.py  论文插图审计清单.md  论文更新日志.md  附件3：指导教师指导记录表.docx
paper/thesis-update-skill/: SKILL.md
reports/: 2026-04-23-server-mode-pressure-report.md
scripts/: cdn_cc_mixed_openloop.py  cdn_cc_openloop.py  cdn_cc_stress_tunable.py  load_http.sh  run_remote_intercept_stress.sh  run_remote_memory_regression.sh  run_stage11_mixed_only.sh  run_stage11_rigorous.sh  run_stage9_case.sh  stage12_normal_probe.py  tls_mixed_openloop.py
src/: lib.rs  locks.rs  main.rs  tls.rs
src/api/: ai_audit.rs  auth.rs  conversions.rs  error.rs  events_handlers.rs  metrics.rs  mod.rs  plugin_install.rs  realtime.rs  router.rs  rules_handlers.rs  safeline_handlers.rs  settings_handlers.rs  sites_handlers.rs  state.rs  system_handlers.rs  tests.rs  types.rs
tests/: admin_api_auth.rs  admin_l4_runtime_refresh.rs  admin_site_hot_reload_e2e.rs  http2_tests.rs  http3_tests.rs  runtime_refresh.rs
vue/: ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+650 files in other folders)
