[package]
name = "waf"
version = "0.1.0"
edition = "2021"

[lib]
name = "waf"
path = "src/lib.rs"

[[bin]]
name = "waf"
path = "src/main.rs"

[features]
default = []
api = ["dep:axum"]
capture = ["dep:pnet"]
http2 = []  # 现有HTTP/2.0支持
http3 = ["dep:quinn", "dep:h3", "dep:h3-quinn", "dep:rustls-native-certs"]  # HTTP/3.0支持

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt", "sync", "time", "net", "signal", "io-util", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
pnet = { version = "0.35", optional = true }
lazy_static = "1.4"
axum = { version = "0.7", optional = true }
# HTTP/2.0 support
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
h2 = "0.3"
tower = "0.4"
bytes = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "http2", "tokio"] }
ipnet = "2.10"
# HTTP/3.0 support
quinn = { version = "0.11.7", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
rustls = { version = "0.23" }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"
rustls-native-certs = { version = "0.7", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
